bgreydon/gui implement test

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,17 @@
-CC = gcc
+CC = gcc -std=c11
 ERROR_FLAGS = -Wall -Wextra
-DEBUG_FLAGS = -g3 -fsanitize=address
+DEBUG_FLAGS = # -g3 -fsanitize=address
 
-stackk:
-	$(CC) $(ERROR_FLAGS) main.c ./stack/stack.c -o a.out $(DEBUG_FLAGS)
-	./a.out
+libstack.a:
+	make -C ./stack/ libstack.a
+	cp ./stack/libstack.a .
+
+calculator.out: clean
+	$(CC) `pkg-config --cflags gtk+-3.0` main.c -o $@ $(ERROR_FLAGS) $(DEBUG_FLAGS) `pkg-config --libs gtk+-3.0` -rdynamic
+	./$@
+
+clean:
+	find . -name "*.o" -delete
+	find . -name "*.out" -delete
+	find . -name "*.a" -delete
+	find . -name "*.d" -delete
