bgreydon/base test plotter

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,13 @@
 CC = gcc -std=c11
 ERROR_FLAGS = -Wall -Wextra
-DEBUG_FLAGS = # -g3 -fsanitize=address
+DEBUG_FLAGS = -g -fsanitize=address
 
 libstack.a:
 	make -C ./stack/ libstack.a
 	cp ./stack/libstack.a .
 
 calculator.out: clean
-	$(CC) `pkg-config --cflags gtk+-3.0` main.c -o $@ $(ERROR_FLAGS) $(DEBUG_FLAGS) `pkg-config --libs gtk+-3.0` -rdynamic
+	$(CC) `pkg-config --cflags gtk+-3.0` main.c plotter/plotter.c -o $@ $(ERROR_FLAGS) $(DEBUG_FLAGS) `pkg-config --libs gtk+-3.0` -rdynamic -lm
 	./$@
 
 clean:
