bgreydon/start implement revers notation

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,9 @@ CC = gcc -std=c11
 ERROR_FLAGS = -Wall -Wextra
 DEBUG_FLAGS = -g -fsanitize=address
 
-libstack.a:
-	make -C ./stack/ libstack.a
-	cp ./stack/libstack.a .
+math_parser.a:
+	make -C ./math_parser/ math_parser.a
+	cp ./math_parser/math_parser.a .
 
 calculator.out: clean
 	$(CC) `pkg-config --cflags gtk+-3.0` main.c plotter/plotter.c callbacks.c -o $@ $(ERROR_FLAGS) $(DEBUG_FLAGS) `pkg-config --libs gtk+-3.0` -rdynamic -lm
