--- a/src/math_parser/Makefile
+++ b/src/math_parser/Makefile
@@ -4,12 +4,15 @@ ERROR_FLAGS := -Wall -Wextra
 SANITIZE := -g3 -fsanitize=address
 MAKE_DEPENDENCE := -MD
 MATH_LIB := -lm
-
+CHECK_LIB := -pthread -lcheck_pic -pthread -lrt -lm -lsubunit
+COVERAGE_FLAG := -fprofile-arcs -ftest-coverage
 
 #### files
 BUILD_DIR := build
+BUILD_DIR_TEST := $(BUILD_DIR)/test
 SOURCE_FILES := $(filter-out main.c, $(wildcard *.c))
 OBJECT_FILES := $(addprefix $(BUILD_DIR)/,$(SOURCE_FILES:.c=.o))
+OBJECT_TEST_FILES := $(addprefix $(BUILD_DIR_TEST)/,$(SOURCE_FILES:.c=.o))
 
 #### build options
 INCLUDE_PATH := . .. ../stack/
@@ -28,12 +31,21 @@ libstack.a:
 $(BUILD_DIR)/%.o: %.c
 	$(CC) $(INCLUDE_FLAG) $< -c -o $@ $(ERROR_FLAGS) $(SANITIZE) -MD $(MATH_LIB) `pkg-config --cflags gtk+-3.0` `pkg-config --libs gtk+-3.0`
 
-## build libstack.a target from object files
+
+## build object files for tests and coverage
+$(BUILD_DIR_TEST)/%.o: %.c
+	$(CC) $(COVERAGE_FLAG) $(INCLUDE_FLAG) -c $< -o $@ $(ERROR_FLAGS) $(SANITIZE) -MD $(MATH_LIB)
+
+## build libmathparser.a target from object files
 libmathparser.a: $(OBJECT_FILES)
 	ar rc $@ $(OBJECT_FILES)
 	ar rc $@
 	ranlib $@
 
+## build test
+test.out: clean $(OBJECT_TEST_FILES) libstack.a
+	$(CC) $(COVERAGE_FLAG) $(INCLUDE_FLAG) ./tests/tests.c $(OBJECT_TEST_FILES) libstack.a -o $@ $(ERROR_FLAGS) $(SANITIZE) -MD $(MATH_LIB) $(CHECK_LIB)
+	./test.out
 
 #### phony targets
 .PHONY: clean all re clear
@@ -47,6 +59,8 @@ clean:
 	find . -name "*.o" -delete
 	find . -name "*.a" -delete
 	find . -name "*.d" -delete
+	find . -name "*gcno" -delete
+	find . -name "*gcda" -delete
 
 clear:
 	clear
